<resources>
    <string name="app_name">Book Store</string>
    <string name="by_signing_up_you_agree_to_book_store_s_terms_conditions_and_privacy_policy">By signing up you agree to book stores\'s Terms conditions and Privacy policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="hello">Hello</string>
    <string name="address">Address</string>
    <string name="book_store">Book Store</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_account">Don\'t Have Account</string>
    <string name="image_icon">image icon</string>
    <string name="welcome_to_your_store">Welcome To Your Store</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">LogOut</string>
    <string name="name">Name:</string>
    <string name="addres">Address:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_now">Edit Now</string>
    <string name="featured_books">Featured Books</string>
    <string name="author">Author:</string>
    <string name="price">Price:</string>
    <string name="ratting">Ratting:</string>
    <string name="description">Description:</string>
    <string name="discount">Discount:</string>
    <string name="author_description">About Author:</string>
    <string name="buy_now">Buy Now</string>
    <string name="view_book">View Book</string>
    <string name="my_books">My Books:</string>

</resources>
