<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/into_background_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/book_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.8"
            android:background="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:onClick="logOut"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_back_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/img_arrow_back_white"
            android:onClick="backBtn"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_icon"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_name_hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/profile_img" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/profile_name_hold"
            app:layout_constraintTop_toBottomOf="@+id/profile_img" />

        <TextView
            android:id="@+id/profile_Address_hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/addres"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/profile_name_hold"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <TextView
            android:id="@+id/profile_Address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/profile_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <TextView
            android:id="@+id/profile_phone_hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/profile_Address_hold"
            app:layout_constraintTop_toBottomOf="@+id/profile_Address_hold" />

        <TextView
            android:id="@+id/profile_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/profile_Address"
            app:layout_constraintTop_toBottomOf="@+id/profile_Address" />

        <TextView
            android:id="@+id/profile_email_hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/profile_phone_hold"
            app:layout_constraintTop_toBottomOf="@+id/profile_phone_hold" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/profile_phone"
            app:layout_constraintTop_toBottomOf="@+id/profile_phone" />

        <TextView
            android:id="@+id/profile_my_books"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorAccent"
            android:text="@string/my_books"
            android:textSize="32sp"
            android:onClick="editProfile"
            app:layout_constraintStart_toStartOf="@id/profile_email_hold"
            app:layout_constraintTop_toBottomOf="@+id/profile_email" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView_my_books"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/profile_my_books" />

        <TextView
            android:id="@+id/profile_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorAccent"
            android:text="@string/edit_profile"
            android:textSize="32sp"
            android:onClick="editProfile"
            app:layout_constraintStart_toStartOf="@id/profile_email"
            app:layout_constraintTop_toBottomOf="@+id/recycleView_my_books" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>